# camera_detection

./: .gitignore  .python-version  README.md  demo.py  detection_util.py  docker-compose.yml  main.py  requirements.txt
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint  README.md  app.py  bin  docker-compose.override.yml  docker-compose.yml  manage.py  map.html  pyproject.toml  setup.cfg  start.sh
backend/.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml  dependabot.yml  labeler.yml
backend/.github/workflows/: code-quality.yml  codeql.yml  community.yml  hadolint.yml  pre-release.yml  release.yaml  shellcheck.yml
backend/config/: .env.template  cookiecutter-config.json
backend/docker/: ci.sh  docker-compose.prod.yml  pycommon.b64
backend/docker/django/: Dockerfile  entrypoint.sh  gunicorn.sh
backend/docker/nginx/: Dockerfile  nginx.conf
backend/poetry_scripts/: django.py
backend/scripts/: cron  deploy  main
backend/src/: asgi.py  urls.py
backend/src/Apps/: __init__.py
backend/src/Apps/approval/: apps.py  urls.py
backend/src/Apps/approval/migrations/: 0001_initial.py  __init__.py
backend/src/Apps/approval/models/: __init__.py  approval_flow.py  approval_rule.py  approval_rule_group.py
backend/src/Apps/approval/serializers/: __init__.py  approval_flow.py
backend/src/Apps/approval/views/: __init__.py  approval_flow.py
backend/src/Apps/auth/: exception.py  urls.py  use_global.py
backend/src/Apps/auth/services/: auth.py  token_authentication.py
backend/src/Apps/auth/views/: auth.py
backend/src/Apps/base/: __init__.py  exception_handler.py
backend/src/Apps/base/constants/: __init__.py  device.py  http.py  languages.py
backend/src/Apps/base/exceptions/: __init__.py  api_error.py  error.py  validation_error.py
backend/src/Apps/base/locale/: __init__.py  translator.py
backend/src/Apps/base/logging/: __init__.py  application_log.py  sensitive_filter.py
backend/src/Apps/base/models/: base.py  cache.py  custom_data_types.py  dirtyfields.py  manager.py  queryset.py  soft_delete.py  timestamped.py  user_interaction.py
backend/src/Apps/base/patterns/: __init__.py
backend/src/Apps/base/serializers/: __init__.py  pickle.py
backend/src/Apps/base/utils/: __init__.py  cron.py  date_time.py  dicttoxml.py  function.py  hash_id.py  main.py  markdown.py  sql.py  type_utils.py
backend/src/Apps/base/views/: __init__.py  mixins.py
backend/src/Apps/detector/: detection_util.py  urls.py  views.py
backend/src/Apps/detector/constants/: coco_class.py
backend/src/Apps/detector/dataclass/: object_detection_result.py
backend/src/Apps/detector/services/: detection_util.py  detector_service.py
backend/src/Apps/detector/views/: __init__.py  benchmark.py  detector.py
backend/src/Apps/gis_map/: apps.py  urls.py
backend/src/Apps/gis_map/constants/: system_attribute_key.py  view_points.py
backend/src/Apps/gis_map/dataclass/: bev_metadata.py
backend/src/Apps/gis_map/migrations/: 0001_initial.py  0002_gismapview.py  0002_gisviewpoint_description_gisviewpoint_name.py  0003_gisviewpointcamera_description.py  0003_remove_gismapview_max_zoom.py  0004_gisviewpointcamera_captured_image.py  0005_gisviewpointcamera_bev_image_and_more.py  0006_gisviewpoint_thumbnail.py  0007_gisviewpointcamera_bev_image_metadata.py  0008_gisviewpoint_warning_threshold.py
backend/src/Apps/gis_map/models/: __init__.py  map_layer.py  map_view.py  user_attribute_key.py  view_point.py  view_point_camera.py
backend/src/Apps/gis_map/serializers/: gis_map.py
backend/src/Apps/gis_map/services/: analytic.py  gis_map.py
backend/src/Apps/gis_map/views/: gis_map.py
backend/src/Apps/illustration/: urls.py  views.py
backend/src/Apps/illustration/templates/: index.html
backend/src/Apps/playground/: README.md  test.py
backend/src/Apps/queue/: handler.py
backend/src/Apps/queue/modules/analytic/: tasks.py
backend/src/Apps/system/: tasks.py  urls.py  views.py
backend/src/Apps/system/constants/: vehicle_type.py
backend/src/Apps/system/models/: __init__.py  traffic_data.py  traffic_data_vehicle.py
backend/src/Apps/system/services/: traffic_analytic.py
backend/src/Apps/user/: apps.py  urls.py
backend/src/Apps/user/constants/: system_attribute_key.py
backend/src/Apps/user/management/commands/: seed_user.py  seed_user_attribute.py
backend/src/Apps/user/migrations/: 0001_initial.py
backend/src/Apps/user/models/: __init__.py
backend/src/Apps/user/models/abstracts/: attribute.py  attribute_key.py
backend/src/Apps/user/serializers/: user.py
backend/src/Apps/user/services/: user.py
backend/src/Apps/user/views/: mixin.py  user.py
backend/src/Apps/utils/aws_client/: aws_manager.py  s3_storage.py
backend/src/Apps/utils/firebase_client/: firestore.py
backend/src/Apps/websocket/: consumers.py  shared_state.py  socket.py  urls.py
backend/src/management/commands/: capture_location.py  demo_detect.py  run_asgi.py
backend/src/settings/: __init__.py  serviceAccountKey.json
backend/src/settings/components/: authentication.py  aws.py  caches.py  common.py  database.py  django_q.py  firebase.py  general.py  logging.py  rest_framework.py  sentry.py
backend/src/settings/environments/: development.py  local.py  production.py
backend/src/templates/txt/: humans.txt
backend/styleguide/: black.toml  darglint.toml  file-structure.toml  flake8.toml  flakehell.toml  isort.toml  mypy.toml  nitpick-style.toml  poetry.toml  pydocstyle.toml
backend/tests/: conftest.py  test_health.py
frontend/: .env.example  .env.local  .eslintignore  .eslintrc  next.config.js  package.json  tsconfig.json
frontend/src/HOCs/: translation.ts
frontend/src/api/: analytic.ts  auth.ts  benchmark.ts  user.ts  view-point.ts
frontend/src/constants/: app-config.ts  default.ts  index.ts  locale.ts  pagination.ts  routes.ts  validation.ts
port_forwarding/node_forwarding/: ecosystem.config.js  server.js
research/: benchmark.py  custom_data.yaml  v8_benchmark.py
research/notebook/: homomatrix_calculator.ipynb
research/playground/: main.py
(+94 files in other folders)
