# All configuration for plugins and other utils is defined here.
# Read more about `setup.cfg`:
# https://docs.python.org/3/distutils/configfile.html

[metadata]
name = "src"
version = 0.1
description = "Diango rest example app"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/MyOrg/django-rest-example"
author = "Minh Hoang "
license = MIT
license_file = LICENCE
classifiers =
    "Programming Language :: Python :: 3.10.4",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)"

[flake8]
# flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show-source = false
statistics = false
doctests = true
enable-extensions = G

# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long
docstring-style = numpy

# Flake plugins:
max-line-length = 120
max-complexity = 20

# Excluding some directories:
exclude = .git,__pycache__,.venv,.eggs,*.egg,build,.build,dist,.tox,poetry_scripts

# Disable some pydocstyle checks:
ignore = B001,B006,C812,C901,D100,D103,D104,D105,D106,D107,D205,D203,D212,D400,D401,D411,D412,D415,E121,E126,E127,E128,E131,E203,E226,E251,E261,E262,E265,E401,E402,E501,E502,E722,E800,F401,F401,F403,F403,F405,F405,F541,F541,I001,I003,I004,I005,N801,N802,N803,N806,N812,N814,N814,Q000,RST201,RST203,RST301,SIM102,SIM105,SIM106,SIM110,SIM118,SIM210,SIM300,T001,TYP001,W292,W292,W391,W503,W503,W504,W504,WPS221,WPS237,WPS300,WPS305,WPS336,WPS355,WPS400,WPS413,WPS453,WPS462,WPS411,D101,WPS301,WPS360,WPS306,DAR000,WPS430,WPS229,WPS210,WPS231,WPS118,WPS428,WPS122,WPS121,WPS226,WPS410,WPS464,N805

# Docs: https://github.com/snoack/flake8-per-file-ignores
# You can completely or partially disable our custom checks,
# to do so you have to ignore `WPS` letters for all python files:
per-file-ignores =
  # Allow `__init__.py` with logic for configuration:
  src/settings/*.py: WPS226, WPS407, WPS412, WPS432
  # Allow to have magic numbers inside migrations and wrong module names:
  src/*/migrations/*.py: WPS102, WPS114, WPS432
  # Enable `assert` keyword and magic numbers for tests:
  bin/*.py: S101, WPS432
  tests/*.py: S101, WPS432
min_python_version = 3.10.0
select = B,E,F,W,B9,ISC,DJ,PT,D

[isort]
# isort configuration:
# https://github.com/PyCQA/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# See https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
line_length = 120
known_typing_extensions = typing_extensions
no_lines_before = TYPING_EXTENSIONS
profile = black
known_local_folder = tool*
known_third_party = MySQLdb,croniter,dateutil,dicttoxml,django,furl,html2text,jsonschema,lxml,markdown,phonenumbers,pytz,urlextract
sections = FUTURE,STDLIB,TYPING_EXTENSIONS,THIRDPARTY,LOCALFOLDER,FIRSTPARTY

[tool:pytest]
# pytest configuration:
# https://docs.pytest.org/en/stable/customize.html

# pytest-django configuration:
# https://pytest-django.readthedocs.io/en/latest/
DJANGO_SETTINGS_MODULE = src.settings

# Timeout for tests, so they can not take longer
# than this amount of seconds.
# You should adjust this value to be as low as possible.
# Configuration:
# https://pypi.org/project/pytest-timeout/
timeout = 5

# Strict `@xfail` by default:
xfail_strict = true

# Directories that are not visited by pytest collector:
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__ poetry_scripts

# You will need to measure your tests speed with `-n auto` and without it,
# so you can see whether it gives you any performance gain, or just gives
# you an overhead. See `docs/template/development-process.rst`.
addopts =
  --strict-markers
  --strict-config
  --doctest-modules
  --fail-on-template-vars
  --dup-fixtures
  # Output:
  --disable-warnings
  --tb=short
  # Parallelism:
  # -n auto
  # --boxed
  # Coverage:
  --cov=src
  --cov=tests
  --cov-branch
  --cov-report=term-missing:skip-covered
  --cov-report=html
  # Need to increase this code coverage threshold when releasing to a higher number
  # The recommend number is 90 ~ 100
  --cov-fail-under=10


[coverage:run]
# Coverage configuration:
# https://coverage.readthedocs.io/en/latest/config.html
# Docs: https://github.com/nedbat/django_coverage_plugin
plugins = django_coverage_plugin
omit = **/txt/*.txt


[doc8]
# doc8 configuration:
# https://github.com/pycqa/doc8
ignore-path = docs/_build
max-line-length = 120
sphinx = True

[pydocstyle]
convention = google
